--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
         "build": "tsc",
         "start": "node dist/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -24,9 +24,12 @@
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.14.1",
         "eslint": "^9.24.0",
+        "jest": "^29.7.0",
         "prettier": "^3.5.3",
+        "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
