--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "@types/express": "^5.0.1",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.14.1",
+        "@types/supertest": "^6.0.3",
         "eslint": "^9.24.0",
         "jest": "^29.7.0",
         "prettier": "^3.5.3",
+        "supertest": "^7.1.0",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
